force-app/main/default/objects/Attendees__c/Attendees__c.object-meta.xml
<CustomObject>
    <label>Attendees</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Attendees Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>