force-app/main/default/objects/Attendees__c/fields/ContactContact__c.field-meta.xml
<CustomField>
    <fullName>ContactContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Trip/Visit Reports</relationshipLabel>
    <relationshipName>Trip_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>