force-app/main/default/objects/Attendees__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <formula>HYPERLINK(&apos;https://na17.salesforce.com/&apos;&amp;Trip_Visit_Report__r.Id, Trip_Visit_Report__r.Location_Event__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location</label>
    <type>Text</type>
</CustomField>