force-app/main/default/objects/Attendees__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>IF(NOT(ISBLANK(ContactContact__c)),  HYPERLINK(&apos;https://na17.salesforce.com/&apos;&amp;ContactContact__r.Id,  ContactContact__r.FirstName &amp;&quot; &quot;&amp; ContactContact__r.LastName), Non_Contact_Attendee__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>