force-app/main/default/objects/Attendees__c/fields/Non_Contact_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Non_Contact_Attendee__c</fullName>
    <label>Non Contact Attendee</label>
    <length>144</length>
    <type>Text</type>
</CustomField>