force-app/main/default/objects/Attendees__c/fields/Trip_Visit_Report__c.field-meta.xml
<CustomField>
    <fullName>Trip_Visit_Report__c</fullName>
    <description>Changed from lookup relationship to master detail relationship for Gorilla Glass Implementation.</description>
    <label>Trip/Visit Report</label>
    <referenceTo>Trip_Visit_Report__c</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Trip_Attendees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>